--- a/wrr/index.html
+++ b/wrr/index.html
@@ -9,7 +9,7 @@
 <body>
         <header>
             <a id ="logo_link" href="index.html">
-                <img class="logo" src="/images/wrr_logo.png" alt="Boise Rafting Logo">
+                <img class="logo" src="images/wrr_logo.png" alt="Boise Rafting Logo">
     
             </a>
             <nav>
