--- a/intro/ice.html
+++ b/intro/ice.html
@@ -5,35 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/ice.css">
+    <link rel="stylesheet" href="/wrr/styles/ice.css">
     <title>In Class Activity</title>
 </head>
 <body>
+    <div class="grid-container">
+        <h1>Tart & Sweet</h1>
+        <img src="/intro/w06_cherries.png">
+        <div class="shadow"></div>
+        <h2 class="item2">Cherries</h2>
+        
+    
+      </div>
 
 
 
-<h1 class="hover">Education</h1>
-
-<p>Education is the difference between wishing you could help others & being able to help them</p>
-<p>---President Nelson</p>
 
 
-<div class="left-align">
-<p>1. Faith in the Lord Jesus Christ</p>
-<p>2. Repentance</p>
-<p>3. Baptism by immersion for the remission of sins</p>
-<p>4. Laying on of hands for the gift of the Holy Ghost</p>
-</div>
 
-<img src="p-nelly.jpeg" alt="the goat" width="50%">
-
-<div class="bigtext">
-    <p>"Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</p>
-</div>
 
 <footer>
-    <p>Russell M. Nelson</p>
-    <p>President of the Church of Jesus Christ of Latter-<br>day Saints    </p>
+   
 </footer>
 
 
