--- a/personal_site_plan/site-plan.html
+++ b/personal_site_plan/site-plan.html
@@ -89,8 +89,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">About</a>
+        <a href="#">Career</a>
       </nav>
       <hr>
       <h2>
@@ -101,10 +101,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Career <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          About  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,30 +125,41 @@
         Content
       </h2>
       <h3>Home page</h3>
+      <h2>Why this site?</h2>
       <p>
-        [Written copy for the home page here]
+        People will come to my site in order to learn about me. This is not something that most people are interested in, therefore my audience is very select. This site will be aimed towards those who would have an interest in what I provide. This includes employers, potential employers, and potentially co-workers who have a curiosity or any questions. This will provide an easy place for people to be able to learn about me without having to explain everything in person. They will easily be able to be redirected to my site. 
       </p>
+      <h2>Questions to be Answered</h2>
+      <p>This site will answer questions that people have about me. This will not be a place to show off, but rather to provide information about who I truly am. This will include things about me personally in my home life as well as in my professional life. It will include information about the experiences I’ve had in the computer science industry. It may also be able to answer questions that the user did not know they had. </p>
+      <p>To complete the actions of being able to be contacted and provide good reading, I need to be able to know how to make a clean, easy-to-read website. Since there are very few actions, I need to make sure that accessibility and ease of use is a high priority in the design process. This includes good font choice as well as layout. It should be simple as well as friendly and easy to read. If the color palette is overly complicated, or the fonts are hard to read, the website will lose much of its meaning.
+        Visitors will come to my site as other sites will not have information about me. If we compare this website to gathering information in other ways, such as in person, this website will be much faster, convenient, and accessible. 
+        There will not be many activities to complete, besides reading. This site is informational so the activity will be reading for understanding. Another potential activity would be contacting me. It will include information to be able to contact me for any reason.
+        </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/computer_1.jpg" alt="Computer">
+        <img src="images/network.jpg" alt="Computer Network">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Career</h3>
+      <h2>Where it Started</h2>
       <p>
-        [Written copy for the Page 2 here]
+        My interest in computer science started in high school when I took a networking class. This was a great step in the right direction and got the wheels turning. After that class, I continued to take computer science classes in high school, which consisted mainly of programming. The language was Java. One of my classes also focused on web design. On top of programming classes, I was able to learn and become certified in Adobe software such as Photoshop, Illustrator, and InDesign. 
       </p>
+      <h2>Where it's Going</h2>
+      <p>Today, I am attending Brigham Young University-Idaho to achieve a computer science degree and expand on my knowledge of networking, computer systems, and programming. The goal of this is to be able to find a job in the computer science industry and to be an asset for a company. Graphic design is a hobby of mine, but not a focus for my studies at the moment.</p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/program.jpg" alt="Programming">
+        <img src="images/rexburg.jpg" alt="Rexburg">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>About</h3>
+      <h2>About Me</h2>
       <p>
-        [Written copy for the Page 3 here]
+        I am from Nampa, Idaho and come from a family of four. I have lived in the same house my entire life and my family is very important to me. Outside of work I enjoy basketball, technology, car audio, music, fashion and shoes. God is a very important figure in my life and I am a member of the Church of Jesus Christ of Latter-Day Saints. Almost all of my decisions in life are influenced by God and He is someone who is very important to me.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/me.jpg" alt="Sullivan Tuft">
+        <img src="images/family.jpg" alt="Family">
 
       </ul>
       <hr>
