--- a/personal_site_plan/site-plan.html
+++ b/personal_site_plan/site-plan.html
@@ -173,20 +173,39 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/home_wireframe.jpg" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Career</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/career_wireframe.jpg" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>About</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/aboutme_wireframe.jpg" alt="page 3 wireframe">
     </main>
+    <footer>
+      <p>Sullivan Tuft &copy; 2023 - Sullivan Tuft</p>
+
+      <p><a href="site-plan.html">Site Plan</a></p>
+      <p><a href="contactus.html">Contact Us</a></p>
+  
+      <div class="social">
+          <a href="https://facebook.com" target="_blank">
+              <img src="images/facebook.png" alt="fb icon">
+          </a>
+          <a href="https://twitter.com" target="_blank">
+              <img src="images/twitter.png" alt="twitter icon">
+          </a>
+          <a href="https://instagram.com" target="_blank">
+              <img src="images/instagram.png" alt="instagram icon">
+          </a>
+      </div>
+      
+  </footer>
   </body>
 
 </html>
