--- a/personal_site_plan/index.html
+++ b/personal_site_plan/index.html
@@ -7,6 +7,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="personal_site_style.css">
 </head>
+<body>
 <header>
     <a id ="logo_link" href="home.html">
                 <img class="logo" src="images/logo.png" alt="Sullivan Tuft Logo">
@@ -19,12 +20,12 @@
       </nav>
     
 </header>
-<body>
+
    
     <div class="box1">
         <h1>Why This Site?</h1>
         <p>People will come to my site in order to learn about me. This is not something that most people are interested in, therefore my audience is very select. This site will be aimed towards those who would have an interest in what I provide. This includes employers, potential employers, and potentially co-workers who have a curiosity or any questions. This will provide an easy place for people to be able to learn about me without having to explain everything in person. They will easily be able to be redirected to my site.</p>
-        <img src="images/computer_1.jpg">
+        <img src="images/computer_1.jpg" alt="Computer">
     </div>
     <div class="box2">
         <h1>Questions to Be Answered</h1>
@@ -33,7 +34,7 @@
         To complete the actions of being able to be contacted and provide good reading, I need to be able to know how to make a clean, easy-to-read website. Since there are very few actions, I need to make sure that accessibility and ease of use is a high priority in the design process. This includes good font choice as well as layout. It should be simple as well as friendly and easy to read. If the color palette is overly complicated, or the fonts are hard to read, the website will lose much of its meaning. <br><br>
          Visitors will come to my site as other sites will not have information about me. If we compare this website to gathering information in other ways, such as in person, this website will be much faster, convenient, and accessible. There will not be many activities to complete, besides reading. This site is informational so the activity will be reading for understanding. Another potential activity would be contacting me. It will include information to be able to contact me for any reason.
         </p>
-        <img src="images/network.jpg">
+        <img src="images/network.jpg" alt="Network">
     </div>
 
 
