--- a/personal_site_plan/career.html
+++ b/personal_site_plan/career.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="personal_site_style.css">
-</head>
+</head>F
 <header>
     <a id ="logo_link" href="home.html">
                 <img class="logo" src="images/logo.png" alt="Sullivan Tuft Logo">
@@ -29,7 +29,7 @@
     
 </header>
 <body>
-   <h1>Career</h1>
+   <h1 class="heading">Career</h1>
     <div class="box3">
         <h1>Where it Started</h1>
         <p>My interest in computer science started in high school when I took a networking class. This was a great step in the right direction and got the wheels turning. After that class, I continued to take computer science classes in high school, which consisted mainly of programming. The language was Java. One of my classes also focused on web design. On top of programming classes, I was able to learn and become certified in Adobe software such as Photoshop, Illustrator, and InDesign.</p>
