--- a/personal_site_plan/career.html
+++ b/personal_site_plan/career.html
@@ -7,15 +7,7 @@
     <title>Career</title>
 </head>
 <body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-    <link rel="stylesheet" href="personal_site_style.css">
-</head>F
+
 <header>
     <a id ="logo_link" href="home.html">
                 <img class="logo" src="images/logo.png" alt="Sullivan Tuft Logo">
@@ -28,17 +20,17 @@
       </nav>
     
 </header>
-<body>
+
    <h1 class="heading">Career</h1>
     <div class="box3">
         <h1>Where it Started</h1>
         <p>My interest in computer science started in high school when I took a networking class. This was a great step in the right direction and got the wheels turning. After that class, I continued to take computer science classes in high school, which consisted mainly of programming. The language was Java. One of my classes also focused on web design. On top of programming classes, I was able to learn and become certified in Adobe software such as Photoshop, Illustrator, and InDesign.</p>
-        <img src="images/program.jpg">
+        <img src="images/program.jpg" alt="Programming On A Computer">
     </div>
     <div class="box4">
         <h1>Questions to Be Answered</h1>
         <p>Today, I am attending Brigham Young University-Idaho to achieve a computer science degree and expand on my knowledge of networking, computer systems, and programming. The goal of this is to be able to find a job in the computer science industry and to be an asset for a company. Graphic design is a hobby of mine, but not a focus for my studies at the moment.</p>
-        <img src="images/rexburg.jpg">
+        <img src="images/rexburg.jpg" alt="Rexburg, Idaho">
     </div>
 
 
@@ -66,5 +58,3 @@
 </body>
 </html>
     
-</body>
-</html>
