--- a/personal_site_plan/career.html
+++ b/personal_site_plan/career.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Career</title>
+    <link rel="stylesheet" href="personal_site_style.css">
 </head>
 <body>
 
